--- a/sun.html
+++ b/sun.html
@@ -1,6 +1,13 @@
+<html>
+<head>
 div {
-    width: 300px;
-    height: 300px;
-    border - radius: 50%;
-    background - color: red;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: red;
 }
+</head>
+<body>
+<div></div>
+</body>
+</html>
