--- a/sun.html
+++ b/sun.html
@@ -1,13 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-div {
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  background-color: red;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sun</title>
+    <style>
+        div {
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            background-color: red;
+        }
+    </style>
 </head>
+
 <body>
-<div></div>
+    <div></div>
 </body>
+
 </html>
