--- a/triangle.html
+++ b/triangle.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>绘制三角形</title>
+    <title>triangle</title>
     <style>
         .triangle {
             width: 0;
