--- a/个人简历/个人简历.html
+++ b/个人简历/个人简历.html
@@ -27,7 +27,7 @@
             <td>简小丽</td>
             <th>年龄</th>
             <td>26</td>
-            <td rowspan="4"><img src="此处应替换为实际图片路径" alt="简小丽" width="100"></td>
+            <td rowspan="4"><img src="https://yym-emg.github.io/site/个人简历/ym ph.jpg" alt="简小丽" width="100"></td>
         </tr>
         <tr>
             <th>性别</th>
